@@ -155,6 +155,12 @@ a Python back-end.
 a computer framework for mass spectrometry, specifically for polymers.
 </ul>
  
+<ul>
+<li><a href="http://www.wg23.ch/mad/software">gbarco</a> -
+a utility to control a barco crt-projector over RS232.
+</ul>
+
+
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
