@@ -1,3 +1,9 @@
+2004-01-14  Damon Chaplin  <damon@gnome.org>
+
+	* todo.html: merged in Paolo's stuff about Glade 3.
+
+	* apps.html: added gbarco.
+
 2003-12-04  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: added Sonic Rainbow.
